Updated physics quiz and dates.

--- a/np/bildvisare-kemi.html
+++ b/np/bildvisare-kemi.html
@@ -76,7 +76,7 @@
 
    <!-- Diskret sidräknare -->
    <div class="absolute bottom-4 right-6 z-50 bg-black/50 px-3 py-1 rounded text-white/50 font-mono text-sm pointer-events-none backdrop-blur-sm">
-       <span id="counter">1 / 9</span>
+       <span id="counter">1 / 10</span>
    </div>
 
 
@@ -87,6 +87,7 @@
            { file: 'materia2.png', title: 'Fasövergångar, densitet och separationsmetoder' },
            { file: 'reaktioner.png', title: 'Reaktioner, bindningar och gaser' },
            { file: 'kol.png', title: 'Organisk kemi' },
+           { file: 'mat.png', title: 'Matens kemi' },
            { file: 'syror.png', title: 'Syror, baser och elektrokemi' },
            { file: 'kretslopp.png', title: 'Miljö & Kretslopp' },
            { file: 'resonemang-kemi.png', title: 'Naturvetenskapliga resonemang' },
