--- a/np/no.html
+++ b/np/no.html
@@ -137,7 +137,7 @@
                            <p class="text-sm text-slate-300">
                                <strong class="text-white">Vilket ämne får jag?</strong><br>
                                Skolverket bestämmer vilket ämne (Biologi, Fysik eller Kemi) din skola ska skriva.
-                               Detta meddelas skolan c:a tre veckor innan provdagen.
+                               Detta meddelas din skola den 16:e mars. Provet skrivs den 22:a april, så du har drygt en månad på dig att plugga på rätt ämne.
                            </p>
                        </div>
                    </div>
