Info and polishing.

--- a/np/materiaquiz.html
+++ b/np/materiaquiz.html
@@ -512,7 +512,7 @@
                        "Den totala massan minskar eftersom snöskorna är ihåliga."
                    ],
                    correct: 0,
-                   explanation: "Tryck är kraft delat med area ($P = F/A$). Genom att använda snöskor ökar du arean mot snön markant. Eftersom din tyngd är oförändrad men ytan större, blir <strong>trycket per kvadratcentimeter lägre</strong> och snön håller bättre."
+                   explanation: "Tryck är kraft delat med area (P = F/A). Genom att använda snöskor ökar du arean mot snön markant. Eftersom din tyngd är oförändrad men ytan större, blir <strong>trycket per kvadratcentimeter lägre</strong> och snön håller bättre."
                },
                {
                    q: "Hur rör sig vindarna naturligt för att jämna ut skillnader i atmosfären?",
