--- a/np/undersokningarquiz.html
+++ b/np/undersokningarquiz.html
@@ -381,7 +381,7 @@
                        "Snörets längd, eftersom det är den faktorn vi bestämmer och ändrar." // Rätt (Index 3)
                    ],
                    correct: 3,
-                   explanation: "I en systematisk undersökning är den <strong>oberoende variabeln</strong> den faktor du medvetet ändrar för att se om det påverkar resultatet. Här ändrar du **snörets längd** för att mäta hur det påverkar tiden."
+                   explanation: "I en systematisk undersökning är den <strong>oberoende variabeln</strong> den faktor du medvetet ändrar för att se om det påverkar resultatet. Här ändrar du snörets längd för att mäta hur det påverkar tiden."
                },
                {
                    q: "Varför är det så viktigt att bara ändra en variabel i taget under ett experiment?",
