Links added. Finished!

--- a/np/no.html
+++ b/np/no.html
@@ -370,7 +370,7 @@
                       <div class="bg-slate-800/50 p-4 rounded-xl border border-white/5">
                           <h4 class="text-indigo-400 font-bold mb-2">Tidsplanering</h4>
                           <p class="text-xs">
-                              Din skola meddelas NO-ämne omkring 5 veckor innan provet. Planera in <strong>2–3 delområden per vecka</strong> och använd de sista 1–2 veckorna till repetition av blandade frågor och AI-coaching.
+                              Din skola meddelas NO-ämne omkring fem veckor före provet. Planera in <strong>2–3 delområden per vecka</strong> och använd de sista 1–2 veckorna till repetition av blandade frågor och AI-coaching.
                           </p>
                       </div>
                       <div class="bg-slate-800/50 p-4 rounded-xl border border-white/5">
