--- a/np/kemi.html
+++ b/np/kemi.html
@@ -350,7 +350,7 @@
                    </div>
                    <div class="flex-1 min-w-0">
                        <h3 class="text-lg font-bold text-white group-hover:text-fuchsia-300 transition-colors">AI Coach</h3>
-                       <p class="text-xs text-fuchsia-400 mt-1 font-semibold tracking-wide">Träna med återkoppling</p>
+                       <p class="text-xs text-fuchsia-400 mt-1 font-semibold tracking-wide">Träna med feedback</p>
                    </div>
                </a>
 
@@ -452,7 +452,7 @@
                            </li>
                            <li class="flex gap-3 items-start">
                                <span class="flex-shrink-0 h-7 w-7 rounded-full bg-blue-900 border border-blue-500/20 text-blue-300 flex items-center justify-center font-bold text-sm shadow-sm mt-0.5">6</span>
-                               <p class="mt-0.5"><strong class="text-blue-300">Använd AI-coachen:</strong> Öppna den länkade NotebookLM-assistenten. Be den förhöra dig och ge feedback på dina svar för att vässa formuleringarna.</p>
+                               <p class="mt-0.5"><strong class="text-blue-300">Använd AI-coachen:</strong> Öppna den länkade AI-Coachen. Be den förhöra dig och ge feedback på dina svar för att vässa formuleringarna.</p>
                            </li>
                        </ul>
                    </div>
