--- a/np/fysik.html
+++ b/np/fysik.html
@@ -452,7 +452,7 @@
                            </li>
                            <li class="flex gap-3 items-start">
                                <span class="flex-shrink-0 h-7 w-7 rounded-full bg-violet-900 border border-violet-500/20 text-violet-300 flex items-center justify-center font-bold text-sm shadow-sm mt-0.5">6</span>
-                               <p class="mt-0.5"><strong class="text-violet-300">Använd AI-coachen:</strong> Öppna den länkade NotebookLM-assistenten. Be den förhöra dig och ge feedback på dina svar för att vässa formuleringarna.</p>
+                               <p class="mt-0.5"><strong class="text-violet-300">Använd AI-coachen:</strong> Öppna den länkade AI-Coachen. Be den förhöra dig och ge feedback på dina svar för att vässa formuleringarna.</p>
                            </li>
                        </ul>
                    </div>
