--- a/np/atomfysik.html
+++ b/np/atomfysik.html
@@ -83,8 +83,10 @@
    <!-- Nav -->
    <nav class="w-full px-6 py-4 flex justify-between items-center z-10 glass border-b-0 border-white/5">
        <div class="text-xl font-extrabold tracking-tighter text-white flex items-center gap-2">
+       <a href="fysik" class="flex items-center gap-2 hover:opacity-80 transition-opacity">
            <span class="bg-violet-600 w-8 h-8 rounded-lg flex items-center justify-center text-xs">NP</span>
-           <span>Guiden <span class="text-emerald-400">| Atomfysik</span></span>
+           <span>Guiden <span class="text-emerald-400">| Fysik</span></span>
+           </a>
        </div>
    </nav>
 
