--- a/np/kallkritik.html
+++ b/np/kallkritik.html
@@ -3,7 +3,7 @@
 <head>
    <meta charset="UTF-8">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-   <title>NP-Guiden | Fysiken i Samhället</title>
+   <title>NP-Guiden | Källkritik</title>
    <script src="https://cdn.tailwindcss.com"></script>
    <link href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@300;400;600;700;800&display=swap" rel="stylesheet">
    <style>
@@ -83,8 +83,10 @@
    <!-- Nav -->
    <nav class="w-full px-6 py-4 flex justify-between items-center z-10 glass border-b-0 border-white/5">
        <div class="text-xl font-extrabold tracking-tighter text-white flex items-center gap-2">
+       <a href="fysik" class="flex items-center gap-2 hover:opacity-80 transition-opacity">
            <span class="bg-violet-600 w-8 h-8 rounded-lg flex items-center justify-center text-xs">NP</span>
-           <span>Guiden <span class="text-pink-400">| Samhället</span></span>
+           <span>Guiden <span class="text-pink-400">| Fysik</span></span>
+           </a>
        </div>
    </nav>
 
@@ -95,7 +97,7 @@
        <!-- Header -->
        <header class="text-center mb-12">
            <h1 class="text-4xl md:text-5xl font-extrabold text-white mb-4 tracking-tight">
-               Fysiken i <span class="text-transparent bg-clip-text bg-gradient-to-r from-pink-400 to-rose-400">Samhället</span>
+               Källkritik & <span class="text-transparent bg-clip-text bg-gradient-to-r from-pink-400 to-rose-400">Granskning</span>
            </h1>
            <p class="text-slate-400 max-w-2xl mx-auto text-sm md:text-base">
                Källkritik, argumentation och naturvetenskapliga perspektiv
