--- a/np/fysik.html
+++ b/np/fysik.html
@@ -261,7 +261,7 @@
                </div>
                <div class="flex-1 min-w-0">
                    <h3 class="text-lg font-bold text-white group-hover:text-pink-300 transition-colors">Källkritik</h3>
-                   <p class="text-xs text-slate-400 mt-1 leading-relaxed">Källkritik och granskning</p>
+                   <p class="text-xs text-slate-400 mt-1 leading-relaxed">Granska information och bedöma källors trovärdighet</p>
                </div>
            </a>
 
